--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <link rel="stylesheet" href="index.css">
-  <h1>People entered: </h1>
-  <h2 id="count-el">0</h2>
-  <button id="increment-btn" onclick="increment()">Increment</button>
-  <script src="index.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- <img src="TDGarden.jpeg" alt="TD Garden, Boston" /> -->
+    <link rel="stylesheet" href="index.css" />
+    <h1>People entered:</h1>
+    <h2 id="count-el">0</h2>
+    <button id="increment-btn" onclick="increment()">Increment</button>
+    <!-- 2. Create a SAVE button.
+        Set the id to "save-btn" and call the save() function when it's clicked -->
+    <button id="save-btn" onclick="save()">Save</button>
+    <script src="index.js"></script>
+  </body>
 </html>
