--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- 2. Create a SAVE button.
         Set the id to "save-btn" and call the save() function when it's clicked -->
     <button id="save-btn" onclick="save()">Save</button>
+    <p id="save-el">Previous entires:</p>
     <script src="index.js"></script>
   </body>
 </html>
